--- a/requirements-research.txt
+++ b/requirements-research.txt
@@ -1,6 +1,8 @@
-# Optional dependencies for research tools (Phase 1+).
+# Dependencies for research tools (reader + reasoning/verify/synthesize).
 # Install: pip install -r requirements-research.txt
 beautifulsoup4>=4.12.0
+openai>=1.0.0
 pypdf>=4.0.0
+tenacity>=8.2.0
 # readability-lxml (optional, for better web extraction):
 # readability-lxml>=0.8.0
