--- a/requirements-research.txt
+++ b/requirements-research.txt
@@ -1,6 +1,10 @@
 # Dependencies for research tools (reader + reasoning/verify/synthesize).
 # Install: pip install -r requirements-research.txt
+# WeasyPrint system deps (Ubuntu): apt-get install -y libpango-1.0-0 libpangocairo-1.0-0 libcairo2 libgdk-pixbuf-2.0-0
 beautifulsoup4>=4.12.0
+markdown>=3.5
+weasyprint>=62.0
+google-genai>=1.0.0
 openai>=1.0.0
 pypdf>=4.0.0
 tenacity>=8.2.0
