--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -1,4 +1,4 @@
-# Research Quality Guardrails: red-team tests must pass (blocker for merge/deploy).
+# Research Quality Guardrails + full test suite (Python, TS, Shell).
 name: Quality Gates
 on:
   push:
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main, master]
 jobs:
-  red-team:
+  python-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,7 +14,43 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Run quality gate tests
+      - name: Install dependencies
+        run: |
+          pip install -r requirements-research.txt -r requirements-test.txt
+      - name: Run Python tests
         run: ./scripts/run_quality_gate_tests.sh
         env:
           OPERATOR_ROOT: ${{ github.workspace }}
+
+  ts-tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ui
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: ui/package-lock.json
+      - name: Install UI dependencies
+        run: npm install
+      - name: Run UI tests
+        run: npm test
+
+  shell-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install BATS
+        run: |
+          sudo npm install -g bats 2>/dev/null || true
+          if ! command -v bats >/dev/null 2>&1; then
+            sudo apt-get update && sudo apt-get install -y bats
+          fi
+      - name: Run shell tests
+        run: |
+          export OPERATOR_ROOT="$GITHUB_WORKSPACE"
+          bats tests/shell/test_op_cli.bats
