--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -54,3 +54,30 @@ jobs:
         run: |
           export OPERATOR_ROOT="$GITHUB_WORKSPACE"
           bats tests/shell/test_op_cli.bats
+
+  ui-e2e:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ui
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: ui/package-lock.json
+      - name: Install dependencies
+        run: npm install
+      - name: Install Playwright browsers
+        run: npx playwright install chromium --with-deps
+      - name: Start UI server
+        run: |
+          UI_PASSWORD_HASH=37a97310cedfe6ae001033c2b9832f6c9722b3337d3aba2ee3bb4b71756a9d72 npm run dev &
+          for i in $(seq 1 60); do code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:3000); [ "$code" != "000" ] && break; sleep 2; done
+      - name: Run E2E tests
+        run: npm run test:e2e
+        env:
+          PLAYWRIGHT_BASE_URL: http://localhost:3000
+          E2E_PASSWORD: e2etest
