--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "next": "16.1.6",
@@ -29,6 +30,7 @@
     "jsdom": "^25",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^2"
+    "vitest": "^2",
+    "@playwright/test": "^1.49"
   }
 }
