feat(ui): research progress, report tab, activity feed, live refresh, tests
- progress route, report/pdf, ReportTab, ProjectRowProgress
- ActivityFeed, LiveRefresh, RuntimeStateBadge
- actions, health, research lib, progress.ts
- API and component tests, vitest config

Made-with: Cursor

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -19,18 +20,19 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6",
     "@testing-library/react": "^16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "jsdom": "^25",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^2",
-    "@playwright/test": "^1.49"
+    "vitest": "^2"
   }
 }
