chore: version conf/prompt_eval_tasks.json, gitignore research/test and memory runtime
- conf/prompt_eval_tasks.json: eval tasks config (domain/question) for team
- .gitignore: research/test/, memory/*.db-wal, memory/*.db-shm, memory/consolidation_last.json

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ factory/opportunities/discovered.jsonl
 factory/opportunities/opportunities.jsonl
 # Research project runtime (keep structure and code)
 research/proj-*/
+research/test/
+# Memory runtime (WAL, consolidation cache; *.db already above)
+memory/*.db-wal
+memory/*.db-shm
+memory/consolidation_last.json
 
 # Python
 __pycache__/
